# justschoolcode

./: CMakeLists.txt  README.md  main.cpp  utility_functions.cpp  utility_functions.h
Exceptions/: Exceptions.h  NumberOfArgumentException.cpp
Model/: Course.cpp  Course.h  CourseList.cpp  CourseList.h  EnrolledCourse.cpp  EnrolledCourse.h  EnrolledCourseList.cpp  EnrolledCourseList.h  StudentEntity.cpp  StudentEntity.h  StudentList.cpp  StudentList.h
Page/: Views.cpp  Views.h
Services/: LearningManagementService.cpp  LearningManagementService.h
data/: CourseList.csv  EnrolledCourseList.csv  StudentList.csv
